buildscript {
	ext {
		springBootVersion = '1.5.6.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

//mybatis 的 Generator 插件入口
configurations {
	mybatisGenerator
}

apply plugin: 'war'
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'

version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8
war.archiveName "jurua-api.war"

repositories {
	mavenCentral()
}

dependencies {
	// springboot
	compile('org.springframework.boot:spring-boot-starter-aop')
	compile('org.redisson:redisson-spring-boot-starter:3.8.0')
	compile('org.springframework.boot:spring-boot-starter-amqp')
	compile('org.springframework.boot:spring-boot-starter-web')
//	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.51'
	compile group: 'net.sf.flexjson', name: 'flexjson', version: '3.3'

//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1')
	testCompile('org.springframework.boot:spring-boot-starter-test')
	// springboot
	// mysql
	runtime('mysql:mysql-connector-java')
	compile('com.github.pagehelper:pagehelper:4.1.1')
	mybatisGenerator 'org.mybatis.generator:mybatis-generator-core:1.3.5'
	mybatisGenerator 'mysql:mysql-connector-java:5.1.43'
	mybatisGenerator 'tk.mybatis:mapper:3.3.9'
	// swagger2
    compile('io.springfox:springfox-swagger2:2.9.2')
    compile('io.springfox:springfox-swagger-ui:2.9.2')
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
	compile('io.jsonwebtoken:jjwt:0.7.0')
	// poi
	compile group: 'cn.afterturn', name: 'easypoi', version: '3.0.3', ext: 'pom'
	compile group: 'cn.afterturn', name: 'easypoi-base', version: '3.0.3'
	compile group: 'cn.afterturn', name: 'easypoi-annotation', version: '3.0.3'
	// caffeine
	compile('org.springframework.boot:spring-boot-starter-cache')
	compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'

}


// 自动生成 mybatis xml model dao 文件
def getDbProperties = {
	def properties = new Properties()
	file("src/main/resources/application.properties").withInputStream { inputStream ->
		properties.load(inputStream)
	}
    file("src/main/resources/generator/generator.properties").withInputStream { inputStream ->
        properties.load(inputStream)
    }
	properties
}
task mybatisGenerate << {
	def properties = getDbProperties()
	ant.properties['targetProject'] = projectDir.path
	ant.properties['driverClass'] = properties.getProperty("spring.datasource.driver-class-name")
	ant.properties['connectionURL'] = properties.getProperty("spring.datasource.url")
	ant.properties['userId'] = properties.getProperty("spring.datasource.username")
	ant.properties['password'] = properties.getProperty("spring.datasource.password")
	ant.properties['src_main_java'] = sourceSets.main.java.srcDirs[0].path
	ant.properties['src_main_resources'] = sourceSets.main.resources.srcDirs[0].path
	ant.properties['modelPackage'] = properties.getProperty("package.model")
	ant.properties['mapperPackage'] = properties.getProperty("package.mapper")
	ant.properties['sqlMapperPackage'] = properties.getProperty("package.xml")
	ant.taskdef(
			name: 'mbgenerator',
			classname: 'org.mybatis.generator.ant.GeneratorAntTask',
			classpath: configurations.mybatisGenerator.asPath
	)
	ant.mbgenerator(overwrite: true,
			configfile: '/Users/zhangbo/Documents/IDEAWorkSpace/jurua-api/src/main/resources/generator/generatorConfig.xml', verbose: true) {
		propertyset {
			propertyref(name: 'targetProject')
			propertyref(name: 'userId')
			propertyref(name: 'driverClass')
			propertyref(name: 'connectionURL')
			propertyref(name: 'password')
			propertyref(name: 'src_main_java')
			propertyref(name: 'src_main_resources')
			propertyref(name: 'modelPackage')
			propertyref(name: 'mapperPackage')
			propertyref(name: 'sqlMapperPackage')
		}
	}
}
